--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
         <h2 class="how-heading sect-title font-bold">Как концентрироваться лучше, чем золотая рыбка 
           (то есть дольше трёх секунд)
         </h2>
+         <div class="text-block">
+           <h3 class="font-bold how-heading-title">5 простых (на самом деле не очень) советов</h3>
         <article class="how-block">
-          <h3 class="title-decor font-bold how-heading-title">5 простых (на самом деле не очень) советов</h3>
-          <h3 class="title-decor font-base">Представьте небо и облака</h3>
+          <h4 class="title-decor how font-base">Представьте небо и облака</h3>
           <p class="main-paragraph font-base">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
             Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать.
@@ -158,6 +159,7 @@
             и на несколько часов и круто тренирует направленное внимание.
           </p>
         </article>
+        </div>
       </section>
       <section class="gallery">
         <h3 class="title-decor font-bold gallery-title">А можно в картинках?</h3>
