--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <h2 class="section-heading font-bold">Почему сосредоточиться так сложно</h2>
         <div class="text-blocks">
           <article class="text-block">
-            <h3 class="title-decor-content font-bold">Многозадачность</h3>
+            <h3 class="title-decor font-bold">Многозадачность</h3>
             <p class="paragraph-main-content font-base">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a class="link">выяснили</a>, что мозгу тяжело концентрироваться
+              <a class="link" href="#" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться
               даже на двух делах одновременно. А когда в поле внимания попадает
               несколько важных задач, организм паникует и выделяет кортизол и
               адреналин — «гормоны стресса». Из-за этого мы работаем
@@ -79,7 +79,7 @@
             </p>
           </article>
           <article class="text-block">
-            <h3 class="title-decor-content font-bold">Дофамин</h3>
+            <h3 class="title-decor font-bold">Дофамин</h3>
             <p class="paragraph-main-content font-base">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -97,7 +97,7 @@
         <h2 class="section-heading font-bold ">Что снижает концентрацию внимания?</h2>
         <div class="text-blocks">
           <article class="text-block">
-            <h3 class="title-decor-content  font-bold">Многозадачность</h3>
+            <h3 class="title-decor  font-bold">Многозадачность</h3>
             <p class="paragraph-main-content font-base">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -108,7 +108,7 @@
             </p>
           </article>
           <article class="text-block">
-            <h3 class="title-decor-content font-bold">Еда</h3>
+            <h3 class="title-decor font-bold">Еда</h3>
             <p class="paragraph-main-content font-base">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -119,7 +119,7 @@
             </p>
           </article>
           <article class="text-block">
-            <h3 class="title-decor-content font-bold">Гаджеты</h3>
+            <h3 class="title-decor font-bold">Гаджеты</h3>
             <p class="paragraph-main-content font-base">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -129,7 +129,6 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </article>
         </div>
       </section>
       <section class="content-section advices">
@@ -143,7 +142,7 @@
           </h3>
           <div class="text-blocks-list">
             <article class="text-block">
-              <h4 class="title-decor-content font-base">Представьте небо и облака</h4>
+              <h4 class="title-decor font-base">Представьте небо и облака</h4>
               <p class="paragraph-main-content font-base">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -156,7 +155,7 @@
               </p>
             </article>
             <article class="text-block">
-              <h4 class="title-decor-content font-base">Включите музыку</h4>
+              <h4 class="title-decor font-base">Включите музыку</h4>
               <p class="paragraph-main-content font-base">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -165,10 +164,10 @@
               </p>
             </article>
             <article class="text-block">
-              <h4 class="title-decor-content font-base">Прогуляйтесь</h4>
+              <h4 class="title-decor font-base">Прогуляйтесь</h4>
               <p class="paragraph-main-content font-base">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a class="link">показал</a>, что созерцание природы повышает
+                <a class="link" href="#" target="_blank">показал</a>, что созерцание природы повышает
                 концентрацию, в то время как после просмотра городских пейзажей
                 она наоборот понижается. Можно совместить прогулку с физическими
                 упражнениями или бегом — так в мозг поступит ещё больше
@@ -177,7 +176,7 @@
               </p>
             </article>
             <article class="text-block">
-              <h4 class="title-decor-content font-base">Хорошо ешьте</h4>
+              <h4 class="title-decor font-base">Хорошо ешьте</h4>
               <p class="paragraph-main-content font-base">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -187,7 +186,7 @@
               </p>
             </article>
             <article class="text-block">
-              <h4 class="title-decor-content font-base">Читайте</h4>
+              <h4 class="title-decor font-base">Читайте</h4>
               <p class="paragraph-main-content font-base">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -202,32 +201,51 @@
         <h3 class="title-decor font-bold gallery-title">
           А можно в картинках?
         </h3>
-        <article class="gallery-div">
-          <img
-            src="./images/sunset.png"
-            alt="Заход солнца"
-            class="gallery-item sunset"
-          />
-          <img
-            src="./images/ice-cream.png"
-            alt="Мороженное"
-            class="gallery-item ice-cream"
-          />
-          <img src="./images/tape.png" alt="Касета" class="gallery-item tape" />
-          <img
-            src="./images/books.png"
-            alt="Стопка книг"
-            class="gallery-item books"
-          />
-          <img
-            src="./images/street.png"
-            alt="Улица"
-            class="gallery-item street"
-          />
-        </article>
+        <ul class="gallery-div">
+          <li class="sunset">
+            <img
+              src="./images/sunset.png"
+              alt="Заход солнца"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+          <li class="ice-cream">
+            <img
+              src="./images/ice-cream.png"
+              alt="Мороженное"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+          <li class="tape">
+            <img 
+              src="./images/tape.png" 
+              alt="Касета" 
+              class="gallery-item image" 
+              loading="lazy"
+            />
+          </li>
+          <li class="gallery-item books">
+            <img
+              src="./images/books.png"
+              alt="Стопка книг"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+          <li class="street">
+            <img
+              src="./images/street.png"
+              alt="Улица"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+        </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <h2 class="font-bold heading">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
