--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a class="link">выяснили</a>, что мозгу тяжело концентрироваться
+              <a class="link" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться
               даже на двух делах одновременно. А когда в поле внимания попадает
               несколько важных задач, организм паникует и выделяет кортизол и
               адреналин — «гормоны стресса». Из-за этого мы работаем
@@ -168,7 +168,7 @@
               <h4 class="title-decor-content font-base">Прогуляйтесь</h4>
               <p class="paragraph-main-content font-base">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a class="link">показал</a>, что созерцание природы повышает
+                <a class="link" target="_blank">показал</a>, что созерцание природы повышает
                 концентрацию, в то время как после просмотра городских пейзажей
                 она наоборот понижается. Можно совместить прогулку с физическими
                 упражнениями или бегом — так в мозг поступит ещё больше
@@ -202,32 +202,51 @@
         <h3 class="title-decor font-bold gallery-title">
           А можно в картинках?
         </h3>
-        <article class="gallery-div">
-          <img
-            src="./images/sunset.png"
-            alt="Заход солнца"
-            class="gallery-item sunset"
-          />
-          <img
-            src="./images/ice-cream.png"
-            alt="Мороженное"
-            class="gallery-item ice-cream"
-          />
-          <img src="./images/tape.png" alt="Касета" class="gallery-item tape" />
-          <img
-            src="./images/books.png"
-            alt="Стопка книг"
-            class="gallery-item books"
-          />
-          <img
-            src="./images/street.png"
-            alt="Улица"
-            class="gallery-item street"
-          />
-        </article>
+        <ul class="gallery-div">
+          <li class="sunset">
+            <img
+              src="./images/sunset.png"
+              alt="Заход солнца"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+          <li class="ice-cream">
+            <img
+              src="./images/ice-cream.png"
+              alt="Мороженное"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+          <li class="tape">
+            <img 
+              src="./images/tape.png" 
+              alt="Касета" 
+              class="gallery-item image" 
+              loading="lazy"
+            />
+          </li>
+          <li class="gallery-item books">
+            <img
+              src="./images/books.png"
+              alt="Стопка книг"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+          <li class="street">
+            <img
+              src="./images/street.png"
+              alt="Улица"
+              class="gallery-item image"
+              loading="lazy"
+            />
+          </li>
+        </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <h2 class="font-bold heading">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
